Changelog for pdoTools.

2.1.17 pl
==============
- [Fenom] Improved support of debugParser.

2.1.16 pl
==============
- [Fenom] Added {$_modx->isMember($groups, $macthAll)}.
- [Fenom] Added {$_modx->getPlaceholders()}.

2.1.15 pl
==============
- [pdoPage] Added parameter &strictMode.

2.1.14 pl
==============
- [pdoSitemap] Added options for cache snippets results.
- [pdoSitemap] Cache enabled by default.

2.1.13 pl
==============
- [#163] Fixed ignoring of &idx in pdoResources and pdoUsers.

2.1.12 pl
==============
- [pdoPage] [#161] Fixed support of arrays in hash when &ajaxMode is enabled.

2.1.11 pl
==============
- [#150] [Fenom] Fixed processing of TVs values in a {$_modx->resource}.
- [#147] [pdoSitemap] Fixed possible duplicates in sitemap.
- [pdoPage] Support of arrays in hash when &ajaxMode is enabled.

2.1.10 pl
==============
- [#157] [Fenom] Fixed pre-processing of Fenom tags in extending templates and chunks.
- [#145] [pdoPage] Rolled back #81 due to issues with complicate forms.

2.1.9 pl
==============
- [#144] [pdoParser] Leave unprocessed FastField tags so other components could parse them.
- [pdoFetch] Updated syntax for "SET SQL_BIG_SELECTS = 1".

2.1.8 pl
==============
- [Fenom] Ability to use id of chunks and templates in {include} and {extends}.
- [Fenom] Added support of debugParser.
- [Fenom] Added {$_modx->getChildIds()} and {$_modx->getParentIds()}.

2.1.7 pl
==============
- Fixed work with integer values from system setting "link_tag_scheme".

2.1.6 pl
==============
- [Fenom] Updated to version 2.8.0.
- [Fenom] Improved check of syntax to process content of chunks.
- [pdoParser] Fixed E_WARNING on line 50 introduced in previous version.

2.1.5 pl
==============
- [Fenom] Fixed register of scripts and styles by cached snippets.

2.1.4 pl
==============
- [Fenom] Fixed TVs in {$_modx->resource}
- [Fenom] Added new method {$_modx->getInfo()}

2.1.3 pl
==============
- Improved work of system setting "pdotools_fenom_php".

2.1.2 pl