@@ -2,11 +2,13 @@ Changelog for pdoTools.
 
 2.1.17 pl
 ==============
+- [Fenom] Added {$_modx->getResource($id, $options)}.
+- [Fenom] Added {$_modx->getResources($where, $options)}.
 - [Fenom] Improved support of debugParser.
 
 2.1.16 pl
 ==============
-- [Fenom] Added {$_modx->isMember($groups, $macthAll)}.
+- [Fenom] Added {$_modx->isMember($groups, $matchAll)}.
 - [Fenom] Added {$_modx->getPlaceholders()}.
 
 2.1.15 pl
